sdk/networkcloud/arm-networkcloud/samples/v1/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                                                       | **Description**                                                                                                                                                                                                                                                                                                                                                                                           |
| ------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [agentPoolsCreateOrUpdateSample.js][agentpoolscreateorupdatesample]                                                 | Create a new Kubernetes cluster agent pool or update the properties of the existing one. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/AgentPools_Create.json                                                                                                                                                                         |
| [agentPoolsDeleteSample.js][agentpoolsdeletesample]                                                                 | Delete the provided Kubernetes cluster agent pool. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/AgentPools_Delete.json                                                                                                                                                                                                               |
| [agentPoolsGetSample.js][agentpoolsgetsample]                                                                       | Get properties of the provided Kubernetes cluster agent pool. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/AgentPools_Get.json                                                                                                                                                                                                       |
| [agentPoolsListByKubernetesClusterSample.js][agentpoolslistbykubernetesclustersample]                               | Get a list of agent pools for the provided Kubernetes cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/AgentPools_ListByKubernetesCluster.json                                                                                                                                                                                  |
| [agentPoolsUpdateSample.js][agentpoolsupdatesample]                                                                 | Patch the properties of the provided Kubernetes cluster agent pool, or update the tags associated with the Kubernetes cluster agent pool. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/AgentPools_Patch.json                                                                   |
| [bareMetalMachineKeySetsCreateOrUpdateSample.js][baremetalmachinekeysetscreateorupdatesample]                       | Create a new bare metal machine key set or update the existing one for the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachineKeySets_Create.json                                                                                                                                                        |
| [bareMetalMachineKeySetsDeleteSample.js][baremetalmachinekeysetsdeletesample]                                       | Delete the bare metal machine key set of the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachineKeySets_Delete.json                                                                                                                                                                                      |
| [bareMetalMachineKeySetsGetSample.js][baremetalmachinekeysetsgetsample]                                             | Get bare metal machine key set of the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachineKeySets_Get.json                                                                                                                                                                                                |
| [bareMetalMachineKeySetsListByClusterSample.js][baremetalmachinekeysetslistbyclustersample]                         | Get a list of bare metal machine key sets for the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachineKeySets_ListByCluster.json                                                                                                                                                                          |
| [bareMetalMachineKeySetsUpdateSample.js][baremetalmachinekeysetsupdatesample]                                       | Patch properties of bare metal machine key set for the provided cluster, or update the tags associated with it. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachineKeySets_Patch.json                                                                                |
| [bareMetalMachinesCordonSample.js][baremetalmachinescordonsample]                                                   | Cordon the provided bare metal machine's Kubernetes node. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_Cordon.json                                                                                                                                                                                                 |
| [bareMetalMachinesCreateOrUpdateSample.js][baremetalmachinescreateorupdatesample]                                   | Create a new bare metal machine or update the properties of the existing one. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_Create.json                                                               |
| [bareMetalMachinesDeleteSample.js][baremetalmachinesdeletesample]                                                   | Delete the provided bare metal machine. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_Delete.json                                                                                                     |
| [bareMetalMachinesGetSample.js][baremetalmachinesgetsample]                                                         | Get properties of the provided bare metal machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_Get.json                                                                                                                                                                                                           |
| [bareMetalMachinesListByResourceGroupSample.js][baremetalmachineslistbyresourcegroupsample]                         | Get a list of bare metal machines in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_ListByResourceGroup.json                                                                                                                                                                            |
| [bareMetalMachinesListBySubscriptionSample.js][baremetalmachineslistbysubscriptionsample]                           | Get a list of bare metal machines in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_ListBySubscription.json                                                                                                                                                                               |
| [bareMetalMachinesPowerOffSample.js][baremetalmachinespoweroffsample]                                               | Power off the provided bare metal machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_PowerOff.json                                                                                                                                                                                                              |
| [bareMetalMachinesReimageSample.js][baremetalmachinesreimagesample]                                                 | Reimage the provided bare metal machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_Reimage.json                                                                                                                                                                                                                 |
| [bareMetalMachinesReplaceSample.js][baremetalmachinesreplacesample]                                                 | Replace the provided bare metal machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_Replace.json                                                                                                                                                                                                                 |
| [bareMetalMachinesRestartSample.js][baremetalmachinesrestartsample]                                                 | Restart the provided bare metal machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_Restart.json                                                                                                                                                                                                                 |
| [bareMetalMachinesRunCommandSample.js][baremetalmachinesruncommandsample]                                           | Run the command or the script on the provided bare metal machine. The URL to storage account with the command execution results and the command exit code can be retrieved from the operation status API once available. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_RunCommand.json                              |
| [bareMetalMachinesRunDataExtractsRestrictedSample.js][baremetalmachinesrundataextractsrestrictedsample]             | Run one or more restricted data extractions on the provided bare metal machine. The URL to storage account with the command execution results and the command exit code can be retrieved from the operation status API once available. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_RunDataExtractsRestricted.json |
| [bareMetalMachinesRunDataExtractsSample.js][baremetalmachinesrundataextractssample]                                 | Run one or more data extractions on the provided bare metal machine. The URL to storage account with the command execution results and the command exit code can be retrieved from the operation status API once available. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_RunDataExtracts.json                      |
| [bareMetalMachinesRunReadCommandsSample.js][baremetalmachinesrunreadcommandssample]                                 | Run one or more read-only commands on the provided bare metal machine. The URL to storage account with the command execution results and the command exit code can be retrieved from the operation status API once available. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_RunReadCommands_Hostname.json           |
| [bareMetalMachinesStartSample.js][baremetalmachinesstartsample]                                                     | Start the provided bare metal machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_Start.json                                                                                                                                                                                                                     |
| [bareMetalMachinesUncordonSample.js][baremetalmachinesuncordonsample]                                               | Uncordon the provided bare metal machine's Kubernetes node. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_Uncordon.json                                                                                                                                                                                             |
| [bareMetalMachinesUpdateSample.js][baremetalmachinesupdatesample]                                                   | Patch properties of the provided bare metal machine, or update tags associated with the bare metal machine. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_Patch.json                                                                                          |
| [bmcKeySetsCreateOrUpdateSample.js][bmckeysetscreateorupdatesample]                                                 | Create a new baseboard management controller key set or update the existing one for the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BmcKeySets_Create.json                                                                                                                                                        |
| [bmcKeySetsDeleteSample.js][bmckeysetsdeletesample]                                                                 | Delete the baseboard management controller key set of the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BmcKeySets_Delete.json                                                                                                                                                                                      |
| [bmcKeySetsGetSample.js][bmckeysetsgetsample]                                                                       | Get baseboard management controller key set of the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BmcKeySets_Get.json                                                                                                                                                                                                |
| [bmcKeySetsListByClusterSample.js][bmckeysetslistbyclustersample]                                                   | Get a list of baseboard management controller key sets for the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BmcKeySets_ListByCluster.json                                                                                                                                                                          |
| [bmcKeySetsUpdateSample.js][bmckeysetsupdatesample]                                                                 | Patch properties of baseboard management controller key set for the provided cluster, or update the tags associated with it. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BmcKeySets_Patch.json                                                                                |
| [cloudServicesNetworksCreateOrUpdateSample.js][cloudservicesnetworkscreateorupdatesample]                           | Create a new cloud services network or update the properties of the existing cloud services network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/CloudServicesNetworks_Create.json                                                                                                                                                  |
| [cloudServicesNetworksDeleteSample.js][cloudservicesnetworksdeletesample]                                           | Delete the provided cloud services network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/CloudServicesNetworks_Delete.json                                                                                                                                                                                                           |
| [cloudServicesNetworksGetSample.js][cloudservicesnetworksgetsample]                                                 | Get properties of the provided cloud services network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/CloudServicesNetworks_Get.json                                                                                                                                                                                                   |
| [cloudServicesNetworksListByResourceGroupSample.js][cloudservicesnetworkslistbyresourcegroupsample]                 | Get a list of cloud services networks in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/CloudServicesNetworks_ListByResourceGroup.json                                                                                                                                                                    |
| [cloudServicesNetworksListBySubscriptionSample.js][cloudservicesnetworkslistbysubscriptionsample]                   | Get a list of cloud services networks in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/CloudServicesNetworks_ListBySubscription.json                                                                                                                                                                       |
| [cloudServicesNetworksUpdateSample.js][cloudservicesnetworksupdatesample]                                           | Update properties of the provided cloud services network, or update the tags associated with it. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/CloudServicesNetworks_Patch.json                                                                                                 |
| [clusterManagersCreateOrUpdateSample.js][clustermanagerscreateorupdatesample]                                       | Create a new cluster manager or update properties of the cluster manager if it exists. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterManagers_Create.json                                                                                                                                                                      |
| [clusterManagersDeleteSample.js][clustermanagersdeletesample]                                                       | Delete the provided cluster manager. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterManagers_Delete.json                                                                                                                                                                                                                        |
| [clusterManagersGetSample.js][clustermanagersgetsample]                                                             | Get the properties of the provided cluster manager. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterManagers_Get.json                                                                                                                                                                                                            |
| [clusterManagersListByResourceGroupSample.js][clustermanagerslistbyresourcegroupsample]                             | Get a list of cluster managers in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterManagers_ListByResourceGroup.json                                                                                                                                                                                 |
| [clusterManagersListBySubscriptionSample.js][clustermanagerslistbysubscriptionsample]                               | Get a list of cluster managers in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterManagers_ListBySubscription.json                                                                                                                                                                                    |
| [clusterManagersUpdateSample.js][clustermanagersupdatesample]                                                       | Patch properties of the provided cluster manager, or update the tags assigned to the cluster manager. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterManagers_Patch.json                                                                                                  |
| [clustersContinueUpdateVersionSample.js][clusterscontinueupdateversionsample]                                       | Trigger the continuation of an update for a cluster with a matching update strategy that has paused after completing a segment of the update. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Clusters_ContinueUpdateVersion.json                                                                                                       |
| [clustersCreateOrUpdateSample.js][clusterscreateorupdatesample]                                                     | Create a new cluster or update the properties of the cluster if it exists. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Clusters_Create.json                                                                                                                                                                                         |
| [clustersDeleteSample.js][clustersdeletesample]                                                                     | Delete the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Clusters_Delete.json                                                                                                                                                                                                                                       |
| [clustersDeploySample.js][clustersdeploysample]                                                                     | Deploy the cluster using the rack configuration provided during creation. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Clusters_Deploy.json                                                                                                                                                                                          |
| [clustersGetSample.js][clustersgetsample]                                                                           | Get properties of the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Clusters_Get.json                                                                                                                                                                                                                               |
| [clustersListByResourceGroupSample.js][clusterslistbyresourcegroupsample]                                           | Get a list of clusters in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Clusters_ListByResourceGroup.json                                                                                                                                                                                                |
| [clustersListBySubscriptionSample.js][clusterslistbysubscriptionsample]                                             | Get a list of clusters in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Clusters_ListBySubscription.json                                                                                                                                                                                                   |
| [clustersScanRuntimeSample.js][clustersscanruntimesample]                                                           | Triggers the execution of a runtime protection scan to detect and remediate detected issues, in accordance with the cluster configuration. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Clusters_ScanRuntime.json                                                                                                                    |
| [clustersUpdateSample.js][clustersupdatesample]                                                                     | Patch the properties of the provided cluster, or update the tags associated with the cluster. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Clusters_Patch_AggregatorOrSingleRackDefinition.json                                                                                |
| [clustersUpdateVersionSample.js][clustersupdateversionsample]                                                       | Update the version of the provided cluster to one of the available supported versions. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Clusters_UpdateVersion.json                                                                                                                                                                      |
| [consolesCreateOrUpdateSample.js][consolescreateorupdatesample]                                                     | Create a new virtual machine console or update the properties of the existing virtual machine console. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Consoles_Create.json                                                                                                                                                             |
| [consolesDeleteSample.js][consolesdeletesample]                                                                     | Delete the provided virtual machine console. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Consoles_Delete.json                                                                                                                                                                                                                       |
| [consolesGetSample.js][consolesgetsample]                                                                           | Get properties of the provided virtual machine console. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Consoles_Get.json                                                                                                                                                                                                               |
| [consolesListByVirtualMachineSample.js][consoleslistbyvirtualmachinesample]                                         | Get a list of consoles for the provided virtual machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Consoles_ListByVirtualMachine.json                                                                                                                                                                                             |
| [consolesUpdateSample.js][consolesupdatesample]                                                                     | Patch the properties of the provided virtual machine console, or update the tags associated with the virtual machine console. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Consoles_Patch.json                                                                                 |
| [kubernetesClusterFeaturesCreateOrUpdateSample.js][kubernetesclusterfeaturescreateorupdatesample]                   | Create a new Kubernetes cluster feature or update properties of the Kubernetes cluster feature if it exists. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusterFeatures_Create.json                                                                                                                                      |
| [kubernetesClusterFeaturesDeleteSample.js][kubernetesclusterfeaturesdeletesample]                                   | Delete the provided Kubernetes cluster feature. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusterFeatures_Delete.json                                                                                                                                                                                                   |
| [kubernetesClusterFeaturesGetSample.js][kubernetesclusterfeaturesgetsample]                                         | Get properties of the provided the Kubernetes cluster feature. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusterFeatures_Get.json                                                                                                                                                                                       |
| [kubernetesClusterFeaturesListByKubernetesClusterSample.js][kubernetesclusterfeatureslistbykubernetesclustersample] | Get a list of features for the provided Kubernetes cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusterFeatures_ListByKubernetesCluster.json                                                                                                                                                                      |
| [kubernetesClusterFeaturesUpdateSample.js][kubernetesclusterfeaturesupdatesample]                                   | Patch properties of the provided Kubernetes cluster feature. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusterFeatures_Patch.json                                                                                                                                                                                       |
| [kubernetesClustersCreateOrUpdateSample.js][kubernetesclusterscreateorupdatesample]                                 | Create a new Kubernetes cluster or update the properties of the existing one. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusters_Create.json                                                                                                                                                                            |
| [kubernetesClustersDeleteSample.js][kubernetesclustersdeletesample]                                                 | Delete the provided Kubernetes cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusters_Delete.json                                                                                                                                                                                                                  |
| [kubernetesClustersGetSample.js][kubernetesclustersgetsample]                                                       | Get properties of the provided the Kubernetes cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusters_Get.json                                                                                                                                                                                                      |
| [kubernetesClustersListByResourceGroupSample.js][kubernetesclusterslistbyresourcegroupsample]                       | Get a list of Kubernetes clusters in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusters_ListByResourceGroup.json                                                                                                                                                                           |
| [kubernetesClustersListBySubscriptionSample.js][kubernetesclusterslistbysubscriptionsample]                         | Get a list of Kubernetes clusters in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusters_ListBySubscription.json                                                                                                                                                                              |
| [kubernetesClustersRestartNodeSample.js][kubernetesclustersrestartnodesample]                                       | Restart a targeted node of a Kubernetes cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusters_RestartNode.json                                                                                                                                                                                                    |
| [kubernetesClustersUpdateSample.js][kubernetesclustersupdatesample]                                                 | Patch the properties of the provided Kubernetes cluster, or update the tags associated with the Kubernetes cluster. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusters_Patch.json                                                                                 |
| [l2NetworksCreateOrUpdateSample.js][l2networkscreateorupdatesample]                                                 | Create a new layer 2 (L2) network or update the properties of the existing network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L2Networks_Create.json                                                                                                                                                                              |
| [l2NetworksDeleteSample.js][l2networksdeletesample]                                                                 | Delete the provided layer 2 (L2) network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L2Networks_Delete.json                                                                                                                                                                                                                        |
| [l2NetworksGetSample.js][l2networksgetsample]                                                                       | Get properties of the provided layer 2 (L2) network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L2Networks_Get.json                                                                                                                                                                                                                |
| [l2NetworksListByResourceGroupSample.js][l2networkslistbyresourcegroupsample]                                       | Get a list of layer 2 (L2) networks in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L2Networks_ListByResourceGroup.json                                                                                                                                                                                 |
| [l2NetworksListBySubscriptionSample.js][l2networkslistbysubscriptionsample]                                         | Get a list of layer 2 (L2) networks in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L2Networks_ListBySubscription.json                                                                                                                                                                                    |
| [l2NetworksUpdateSample.js][l2networksupdatesample]                                                                 | Update tags associated with the provided layer 2 (L2) network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L2Networks_Patch.json                                                                                                                                                                                                    |
| [l3NetworksCreateOrUpdateSample.js][l3networkscreateorupdatesample]                                                 | Create a new layer 3 (L3) network or update the properties of the existing network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L3Networks_Create.json                                                                                                                                                                              |
| [l3NetworksDeleteSample.js][l3networksdeletesample]                                                                 | Delete the provided layer 3 (L3) network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L3Networks_Delete.json                                                                                                                                                                                                                        |
| [l3NetworksGetSample.js][l3networksgetsample]                                                                       | Get properties of the provided layer 3 (L3) network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L3Networks_Get.json                                                                                                                                                                                                                |
| [l3NetworksListByResourceGroupSample.js][l3networkslistbyresourcegroupsample]                                       | Get a list of layer 3 (L3) networks in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L3Networks_ListByResourceGroup.json                                                                                                                                                                                 |
| [l3NetworksListBySubscriptionSample.js][l3networkslistbysubscriptionsample]                                         | Get a list of layer 3 (L3) networks in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L3Networks_ListBySubscription.json                                                                                                                                                                                    |
| [l3NetworksUpdateSample.js][l3networksupdatesample]                                                                 | Update tags associated with the provided layer 3 (L3) network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L3Networks_Patch.json                                                                                                                                                                                                    |
| [metricsConfigurationsCreateOrUpdateSample.js][metricsconfigurationscreateorupdatesample]                           | Create new or update the existing metrics configuration of the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterMetricsConfigurations_Create.json                                                                                                                                                               |
| [metricsConfigurationsDeleteSample.js][metricsconfigurationsdeletesample]                                           | Delete the metrics configuration of the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterMetricsConfigurations_Delete.json                                                                                                                                                                                      |
| [metricsConfigurationsGetSample.js][metricsconfigurationsgetsample]                                                 | Get metrics configuration of the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterMetricsConfigurations_Get.json                                                                                                                                                                                                |
| [metricsConfigurationsListByClusterSample.js][metricsconfigurationslistbyclustersample]                             | Get a list of metrics configurations for the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterMetricsConfigurations_ListByCluster.json                                                                                                                                                                          |
| [metricsConfigurationsUpdateSample.js][metricsconfigurationsupdatesample]                                           | Patch properties of metrics configuration for the provided cluster, or update the tags associated with it. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterMetricsConfigurations_Patch.json                                                                                |
| [operationsListSample.js][operationslistsample]                                                                     | Get a list of all available resource provider operations. It contains a URL link to get the next set of results. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Operations_List.json                                                                                                                                                   |
| [rackSkusGetSample.js][rackskusgetsample]                                                                           | Get the properties of the provided rack SKU. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/RackSkus_Get.json                                                                                                                                                                                                                          |
| [rackSkusListBySubscriptionSample.js][rackskuslistbysubscriptionsample]                                             | Get a list of rack SKUs in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/RackSkus_ListBySubscription.json                                                                                                                                                                                                  |
| [racksCreateOrUpdateSample.js][rackscreateorupdatesample]                                                           | Create a new rack or update properties of the existing one. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Racks_Create.json                                                                                             |
| [racksDeleteSample.js][racksdeletesample]                                                                           | Delete the provided rack. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Racks_Delete.json                                                                                                                               |
| [racksGetSample.js][racksgetsample]                                                                                 | Get properties of the provided rack. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Racks_Get.json                                                                                                                                                                                                                                     |
| [racksListByResourceGroupSample.js][rackslistbyresourcegroupsample]                                                 | Get a list of racks in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Racks_ListByResourceGroup.json                                                                                                                                                                                                      |
| [racksListBySubscriptionSample.js][rackslistbysubscriptionsample]                                                   | Get a list of racks in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Racks_ListBySubscription.json                                                                                                                                                                                                         |
| [racksUpdateSample.js][racksupdatesample]                                                                           | Patch properties of the provided rack, or update the tags associated with the rack. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Racks_Patch.json                                                                                                                              |
| [storageAppliancesCreateOrUpdateSample.js][storageappliancescreateorupdatesample]                                   | Create a new storage appliance or update the properties of the existing one. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/StorageAppliances_Create.json                                                                |
| [storageAppliancesDeleteSample.js][storageappliancesdeletesample]                                                   | Delete the provided storage appliance. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/StorageAppliances_Delete.json                                                                                                      |
| [storageAppliancesDisableRemoteVendorManagementSample.js][storageappliancesdisableremotevendormanagementsample]     | Disable remote vendor management of the provided storage appliance. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/StorageAppliances_DisableRemoteVendorManagement.json                                                                                                                                                                |
| [storageAppliancesEnableRemoteVendorManagementSample.js][storageappliancesenableremotevendormanagementsample]       | Enable remote vendor management of the provided storage appliance. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/StorageAppliances_EnableRemoteVendorManagement.json                                                                                                                                                                  |
| [storageAppliancesGetSample.js][storageappliancesgetsample]                                                         | Get properties of the provided storage appliance. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/StorageAppliances_Get.json                                                                                                                                                                                                            |
| [storageAppliancesListByResourceGroupSample.js][storageapplianceslistbyresourcegroupsample]                         | Get a list of storage appliances in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/StorageAppliances_ListByResourceGroup.json                                                                                                                                                                             |
| [storageAppliancesListBySubscriptionSample.js][storageapplianceslistbysubscriptionsample]                           | Get a list of storage appliances in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/StorageAppliances_ListBySubscription.json                                                                                                                                                                                |
| [storageAppliancesRunReadCommandsSample.js][storageappliancesrunreadcommandssample]                                 | Run one or more read-only commands on the provided storage appliance. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/StorageAppliances_RunReadCommands.json                                                                                                                                                                            |
| [storageAppliancesUpdateSample.js][storageappliancesupdatesample]                                                   | Update properties of the provided storage appliance, or update tags associated with the storage appliance Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/StorageAppliances_Patch.json                                                                                            |
| [trunkedNetworksCreateOrUpdateSample.js][trunkednetworkscreateorupdatesample]                                       | Create a new trunked network or update the properties of the existing trunked network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/TrunkedNetworks_Create.json                                                                                                                                                                      |
| [trunkedNetworksDeleteSample.js][trunkednetworksdeletesample]                                                       | Delete the provided trunked network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/TrunkedNetworks_Delete.json                                                                                                                                                                                                                        |
| [trunkedNetworksGetSample.js][trunkednetworksgetsample]                                                             | Get properties of the provided trunked network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/TrunkedNetworks_Get.json                                                                                                                                                                                                                |
| [trunkedNetworksListByResourceGroupSample.js][trunkednetworkslistbyresourcegroupsample]                             | Get a list of trunked networks in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/TrunkedNetworks_ListByResourceGroup.json                                                                                                                                                                                 |
| [trunkedNetworksListBySubscriptionSample.js][trunkednetworkslistbysubscriptionsample]                               | Get a list of trunked networks in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/TrunkedNetworks_ListBySubscription.json                                                                                                                                                                                    |
| [trunkedNetworksUpdateSample.js][trunkednetworksupdatesample]                                                       | Update tags associated with the provided trunked network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/TrunkedNetworks_Patch.json                                                                                                                                                                                                    |
| [virtualMachinesAssignRelaySample.js][virtualmachinesassignrelaysample]                                             | Assigns a relay to the specified Microsoft.HybridCompute machine associated with the provided virtual machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_AssignRelay.json                                                                                                                                         |
| [virtualMachinesCreateOrUpdateSample.js][virtualmachinescreateorupdatesample]                                       | Create a new virtual machine or update the properties of the existing virtual machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_Create.json                                                                                                                                                                      |
| [virtualMachinesDeleteSample.js][virtualmachinesdeletesample]                                                       | Delete the provided virtual machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_Delete.json                                                                                                                                                                                                                        |
| [virtualMachinesGetSample.js][virtualmachinesgetsample]                                                             | Get properties of the provided virtual machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_Get.json                                                                                                                                                                                                                |
| [virtualMachinesListByResourceGroupSample.js][virtualmachineslistbyresourcegroupsample]                             | Get a list of virtual machines in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_ListByResourceGroup.json                                                                                                                                                                                 |
| [virtualMachinesListBySubscriptionSample.js][virtualmachineslistbysubscriptionsample]                               | Get a list of virtual machines in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_ListBySubscription.json                                                                                                                                                                                    |
| [virtualMachinesPowerOffSample.js][virtualmachinespoweroffsample]                                                   | Power off the provided virtual machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_PowerOff.json                                                                                                                                                                                                                   |
| [virtualMachinesReimageSample.js][virtualmachinesreimagesample]                                                     | Reimage the provided virtual machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_Reimage.json                                                                                                                                                                                                                      |
| [virtualMachinesRestartSample.js][virtualmachinesrestartsample]                                                     | Restart the provided virtual machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_Restart.json                                                                                                                                                                                                                      |
| [virtualMachinesStartSample.js][virtualmachinesstartsample]                                                         | Start the provided virtual machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_Start.json                                                                                                                                                                                                                          |
| [virtualMachinesUpdateSample.js][virtualmachinesupdatesample]                                                       | Patch the properties of the provided virtual machine, or update the tags associated with the virtual machine. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_Patch.json                                                                                          |
| [volumesCreateOrUpdateSample.js][volumescreateorupdatesample]                                                       | Create a new volume or update the properties of the existing one. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Volumes_Create.json                                                                                                                                                                                                   |
| [volumesDeleteSample.js][volumesdeletesample]                                                                       | Delete the provided volume. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Volumes_Delete.json                                                                                                                                                                                                                                         |
| [volumesGetSample.js][volumesgetsample]                                                                             | Get properties of the provided volume. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Volumes_Get.json                                                                                                                                                                                                                                 |
| [volumesListByResourceGroupSample.js][volumeslistbyresourcegroupsample]                                             | Get a list of volumes in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Volumes_ListByResourceGroup.json                                                                                                                                                                                                  |
| [volumesListBySubscriptionSample.js][volumeslistbysubscriptionsample]                                               | Get a list of volumes in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Volumes_ListBySubscription.json                                                                                                                                                                                                     |
| [volumesUpdateSample.js][volumesupdatesample]                                                                       | Update tags associated with the provided volume. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Volumes_Patch.json                                                                                                                                                                                                                     |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node agentPoolsCreateOrUpdateSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env NETWORKCLOUD_SUBSCRIPTION_ID="<networkcloud subscription id>" NETWORKCLOUD_RESOURCE_GROUP="<networkcloud resource group>" node agentPoolsCreateOrUpdateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[agentpoolscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/agentPoolsCreateOrUpdateSample.js
[agentpoolsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/agentPoolsDeleteSample.js
[agentpoolsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/agentPoolsGetSample.js
[agentpoolslistbykubernetesclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/agentPoolsListByKubernetesClusterSample.js
[agentpoolsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/agentPoolsUpdateSample.js
[baremetalmachinekeysetscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachineKeySetsCreateOrUpdateSample.js
[baremetalmachinekeysetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachineKeySetsDeleteSample.js
[baremetalmachinekeysetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachineKeySetsGetSample.js
[baremetalmachinekeysetslistbyclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachineKeySetsListByClusterSample.js
[baremetalmachinekeysetsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachineKeySetsUpdateSample.js
[baremetalmachinescordonsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachinesCordonSample.js
[baremetalmachinescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachinesCreateOrUpdateSample.js
[baremetalmachinesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachinesDeleteSample.js
[baremetalmachinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachinesGetSample.js
[baremetalmachineslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachinesListByResourceGroupSample.js
[baremetalmachineslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachinesListBySubscriptionSample.js
[baremetalmachinespoweroffsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachinesPowerOffSample.js
[baremetalmachinesreimagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachinesReimageSample.js
[baremetalmachinesreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachinesReplaceSample.js
[baremetalmachinesrestartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachinesRestartSample.js
[baremetalmachinesruncommandsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachinesRunCommandSample.js
[baremetalmachinesrundataextractsrestrictedsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachinesRunDataExtractsRestrictedSample.js
[baremetalmachinesrundataextractssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachinesRunDataExtractsSample.js
[baremetalmachinesrunreadcommandssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachinesRunReadCommandsSample.js
[baremetalmachinesstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachinesStartSample.js
[baremetalmachinesuncordonsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachinesUncordonSample.js
[baremetalmachinesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bareMetalMachinesUpdateSample.js
[bmckeysetscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bmcKeySetsCreateOrUpdateSample.js
[bmckeysetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bmcKeySetsDeleteSample.js
[bmckeysetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bmcKeySetsGetSample.js
[bmckeysetslistbyclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bmcKeySetsListByClusterSample.js
[bmckeysetsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/bmcKeySetsUpdateSample.js
[cloudservicesnetworkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/cloudServicesNetworksCreateOrUpdateSample.js
[cloudservicesnetworksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/cloudServicesNetworksDeleteSample.js
[cloudservicesnetworksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/cloudServicesNetworksGetSample.js
[cloudservicesnetworkslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/cloudServicesNetworksListByResourceGroupSample.js
[cloudservicesnetworkslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/cloudServicesNetworksListBySubscriptionSample.js
[cloudservicesnetworksupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/cloudServicesNetworksUpdateSample.js
[clustermanagerscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/clusterManagersCreateOrUpdateSample.js
[clustermanagersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/clusterManagersDeleteSample.js
[clustermanagersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/clusterManagersGetSample.js
[clustermanagerslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/clusterManagersListByResourceGroupSample.js
[clustermanagerslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/clusterManagersListBySubscriptionSample.js
[clustermanagersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/clusterManagersUpdateSample.js
[clusterscontinueupdateversionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/clustersContinueUpdateVersionSample.js
[clusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/clustersCreateOrUpdateSample.js
[clustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/clustersDeleteSample.js
[clustersdeploysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/clustersDeploySample.js
[clustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/clustersGetSample.js
[clusterslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/clustersListByResourceGroupSample.js
[clusterslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/clustersListBySubscriptionSample.js
[clustersscanruntimesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/clustersScanRuntimeSample.js
[clustersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/clustersUpdateSample.js
[clustersupdateversionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/clustersUpdateVersionSample.js
[consolescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/consolesCreateOrUpdateSample.js
[consolesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/consolesDeleteSample.js
[consolesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/consolesGetSample.js
[consoleslistbyvirtualmachinesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/consolesListByVirtualMachineSample.js
[consolesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/consolesUpdateSample.js
[kubernetesclusterfeaturescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/kubernetesClusterFeaturesCreateOrUpdateSample.js
[kubernetesclusterfeaturesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/kubernetesClusterFeaturesDeleteSample.js
[kubernetesclusterfeaturesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/kubernetesClusterFeaturesGetSample.js
[kubernetesclusterfeatureslistbykubernetesclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/kubernetesClusterFeaturesListByKubernetesClusterSample.js
[kubernetesclusterfeaturesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/kubernetesClusterFeaturesUpdateSample.js
[kubernetesclusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/kubernetesClustersCreateOrUpdateSample.js
[kubernetesclustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/kubernetesClustersDeleteSample.js
[kubernetesclustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/kubernetesClustersGetSample.js
[kubernetesclusterslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/kubernetesClustersListByResourceGroupSample.js
[kubernetesclusterslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/kubernetesClustersListBySubscriptionSample.js
[kubernetesclustersrestartnodesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/kubernetesClustersRestartNodeSample.js
[kubernetesclustersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/kubernetesClustersUpdateSample.js
[l2networkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/l2NetworksCreateOrUpdateSample.js
[l2networksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/l2NetworksDeleteSample.js
[l2networksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/l2NetworksGetSample.js
[l2networkslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/l2NetworksListByResourceGroupSample.js
[l2networkslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/l2NetworksListBySubscriptionSample.js
[l2networksupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/l2NetworksUpdateSample.js
[l3networkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/l3NetworksCreateOrUpdateSample.js
[l3networksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/l3NetworksDeleteSample.js
[l3networksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/l3NetworksGetSample.js
[l3networkslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/l3NetworksListByResourceGroupSample.js
[l3networkslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/l3NetworksListBySubscriptionSample.js
[l3networksupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/l3NetworksUpdateSample.js
[metricsconfigurationscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/metricsConfigurationsCreateOrUpdateSample.js
[metricsconfigurationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/metricsConfigurationsDeleteSample.js
[metricsconfigurationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/metricsConfigurationsGetSample.js
[metricsconfigurationslistbyclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/metricsConfigurationsListByClusterSample.js
[metricsconfigurationsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/metricsConfigurationsUpdateSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/operationsListSample.js
[rackskusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/rackSkusGetSample.js
[rackskuslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/rackSkusListBySubscriptionSample.js
[rackscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/racksCreateOrUpdateSample.js
[racksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/racksDeleteSample.js
[racksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/racksGetSample.js
[rackslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/racksListByResourceGroupSample.js
[rackslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/racksListBySubscriptionSample.js
[racksupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/racksUpdateSample.js
[storageappliancescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/storageAppliancesCreateOrUpdateSample.js
[storageappliancesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/storageAppliancesDeleteSample.js
[storageappliancesdisableremotevendormanagementsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/storageAppliancesDisableRemoteVendorManagementSample.js
[storageappliancesenableremotevendormanagementsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/storageAppliancesEnableRemoteVendorManagementSample.js
[storageappliancesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/storageAppliancesGetSample.js
[storageapplianceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/storageAppliancesListByResourceGroupSample.js
[storageapplianceslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/storageAppliancesListBySubscriptionSample.js
[storageappliancesrunreadcommandssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/storageAppliancesRunReadCommandsSample.js
[storageappliancesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/storageAppliancesUpdateSample.js
[trunkednetworkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/trunkedNetworksCreateOrUpdateSample.js
[trunkednetworksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/trunkedNetworksDeleteSample.js
[trunkednetworksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/trunkedNetworksGetSample.js
[trunkednetworkslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/trunkedNetworksListByResourceGroupSample.js
[trunkednetworkslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/trunkedNetworksListBySubscriptionSample.js
[trunkednetworksupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/trunkedNetworksUpdateSample.js
[virtualmachinesassignrelaysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/virtualMachinesAssignRelaySample.js
[virtualmachinescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/virtualMachinesCreateOrUpdateSample.js
[virtualmachinesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/virtualMachinesDeleteSample.js
[virtualmachinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/virtualMachinesGetSample.js
[virtualmachineslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/virtualMachinesListByResourceGroupSample.js
[virtualmachineslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/virtualMachinesListBySubscriptionSample.js
[virtualmachinespoweroffsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/virtualMachinesPowerOffSample.js
[virtualmachinesreimagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/virtualMachinesReimageSample.js
[virtualmachinesrestartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/virtualMachinesRestartSample.js
[virtualmachinesstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/virtualMachinesStartSample.js
[virtualmachinesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/virtualMachinesUpdateSample.js
[volumescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/volumesCreateOrUpdateSample.js
[volumesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/volumesDeleteSample.js
[volumesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/volumesGetSample.js
[volumeslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/volumesListByResourceGroupSample.js
[volumeslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/volumesListBySubscriptionSample.js
[volumesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/javascript/volumesUpdateSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-networkcloud?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/networkcloud/arm-networkcloud/README.md
