sdk/networkcloud/arm-networkcloud/samples/v2/javascript/README.md
# @azure/arm-networkcloud client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for @azure/arm-networkcloud in some common scenarios.

| **File Name**                                                                                                             | **Description**                                                                                                                                                                                                                                                                                                                                               |
| ------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [accessBridgesCreateOrUpdateSample.js][accessbridgescreateorupdatesample]                                                 | create a new access bridge or update the properties of the existing access bridge. x-ms-original-file: 2026-07-01/AccessBridges_CreateOrUpdate.json                                                                                                                                                                                                           |
| [accessBridgesDeleteSample.js][accessbridgesdeletesample]                                                                 | delete the specified access bridge. x-ms-original-file: 2026-07-01/AccessBridges_Delete.json                                                                                                                                                                                                                                                                  |
| [accessBridgesGetSample.js][accessbridgesgetsample]                                                                       | get the properties of the provided access bridge. x-ms-original-file: 2026-07-01/AccessBridges_Get.json                                                                                                                                                                                                                                                       |
| [accessBridgesListByResourceGroupSample.js][accessbridgeslistbyresourcegroupsample]                                       | get a list of access bridges in the provided resource group. x-ms-original-file: 2026-07-01/AccessBridges_ListByResourceGroup.json                                                                                                                                                                                                                            |
| [accessBridgesListBySubscriptionSample.js][accessbridgeslistbysubscriptionsample]                                         | get a list of access bridges in the provided subscription. x-ms-original-file: 2026-07-01/AccessBridges_ListBySubscription.json                                                                                                                                                                                                                               |
| [accessBridgesUpdateSample.js][accessbridgesupdatesample]                                                                 | update properties of the provided access bridge, or update tags associated with the access bridge. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/AccessBridges_Patch.json                                                                                                                                              |
| [agentPoolsCreateOrUpdateSample.js][agentpoolscreateorupdatesample]                                                       | create a new Kubernetes cluster agent pool or update the properties of the existing one. x-ms-original-file: 2026-07-01/AgentPools_Create.json                                                                                                                                                                                                                |
| [agentPoolsDeleteSample.js][agentpoolsdeletesample]                                                                       | delete the provided Kubernetes cluster agent pool. x-ms-original-file: 2026-07-01/AgentPools_Delete.json                                                                                                                                                                                                                                                      |
| [agentPoolsGetSample.js][agentpoolsgetsample]                                                                             | get properties of the provided Kubernetes cluster agent pool. x-ms-original-file: 2026-07-01/AgentPools_Get.json                                                                                                                                                                                                                                              |
| [agentPoolsListByKubernetesClusterSample.js][agentpoolslistbykubernetesclustersample]                                     | get a list of agent pools for the provided Kubernetes cluster. x-ms-original-file: 2026-07-01/AgentPools_ListByKubernetesCluster.json                                                                                                                                                                                                                         |
| [agentPoolsUpdateSample.js][agentpoolsupdatesample]                                                                       | patch the properties of the provided Kubernetes cluster agent pool, or update the tags associated with the Kubernetes cluster agent pool. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/AgentPools_Patch.json                                                                                                          |
| [bareMetalMachineKeySetsCreateOrUpdateSample.js][baremetalmachinekeysetscreateorupdatesample]                             | create a new bare metal machine key set or update the existing one for the provided cluster. x-ms-original-file: 2026-07-01/BareMetalMachineKeySets_Create.json                                                                                                                                                                                               |
| [bareMetalMachineKeySetsDeleteSample.js][baremetalmachinekeysetsdeletesample]                                             | delete the bare metal machine key set of the provided cluster. x-ms-original-file: 2026-07-01/BareMetalMachineKeySets_Delete.json                                                                                                                                                                                                                             |
| [bareMetalMachineKeySetsGetSample.js][baremetalmachinekeysetsgetsample]                                                   | get bare metal machine key set of the provided cluster. x-ms-original-file: 2026-07-01/BareMetalMachineKeySets_Get.json                                                                                                                                                                                                                                       |
| [bareMetalMachineKeySetsListByClusterSample.js][baremetalmachinekeysetslistbyclustersample]                               | get a list of bare metal machine key sets for the provided cluster. x-ms-original-file: 2026-07-01/BareMetalMachineKeySets_ListByCluster.json                                                                                                                                                                                                                 |
| [bareMetalMachineKeySetsUpdateSample.js][baremetalmachinekeysetsupdatesample]                                             | patch properties of bare metal machine key set for the provided cluster, or update the tags associated with it. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/BareMetalMachineKeySets_Patch.json                                                                                                                       |
| [bareMetalMachinesCordonSample.js][baremetalmachinescordonsample]                                                         | cordon the provided bare metal machine's Kubernetes node. x-ms-original-file: 2026-07-01/BareMetalMachines_Cordon.json                                                                                                                                                                                                                                        |
| [bareMetalMachinesCreateOrUpdateSample.js][baremetalmachinescreateorupdatesample]                                         | create a new bare metal machine or update the properties of the existing one. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: 2026-07-01/BareMetalMachines_Create.json                                                                                                      |
| [bareMetalMachinesDeleteSample.js][baremetalmachinesdeletesample]                                                         | delete the provided bare metal machine. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: 2026-07-01/BareMetalMachines_Delete.json                                                                                                                                            |
| [bareMetalMachinesGetSample.js][baremetalmachinesgetsample]                                                               | get properties of the provided bare metal machine. x-ms-original-file: 2026-07-01/BareMetalMachines_Get.json                                                                                                                                                                                                                                                  |
| [bareMetalMachinesListByResourceGroupSample.js][baremetalmachineslistbyresourcegroupsample]                               | get a list of bare metal machines in the provided resource group. x-ms-original-file: 2026-07-01/BareMetalMachines_ListByResourceGroup.json                                                                                                                                                                                                                   |
| [bareMetalMachinesListBySubscriptionSample.js][baremetalmachineslistbysubscriptionsample]                                 | get a list of bare metal machines in the provided subscription. x-ms-original-file: 2026-07-01/BareMetalMachines_ListBySubscription.json                                                                                                                                                                                                                      |
| [bareMetalMachinesPowerOffSample.js][baremetalmachinespoweroffsample]                                                     | power off the provided bare metal machine. x-ms-original-file: 2026-07-01/BareMetalMachines_PowerOff.json                                                                                                                                                                                                                                                     |
| [bareMetalMachinesReimageSample.js][baremetalmachinesreimagesample]                                                       | reimage the provided bare metal machine. x-ms-original-file: 2026-07-01/BareMetalMachines_Reimage.json                                                                                                                                                                                                                                                        |
| [bareMetalMachinesReplaceSample.js][baremetalmachinesreplacesample]                                                       | replace the provided bare metal machine. x-ms-original-file: 2026-07-01/BareMetalMachines_Replace.json                                                                                                                                                                                                                                                        |
| [bareMetalMachinesRestartSample.js][baremetalmachinesrestartsample]                                                       | restart the provided bare metal machine. x-ms-original-file: 2026-07-01/BareMetalMachines_Restart.json                                                                                                                                                                                                                                                        |
| [bareMetalMachinesRunCommandSample.js][baremetalmachinesruncommandsample]                                                 | run the command or the script on the provided bare metal machine. The URL to storage account with the command execution results and the command exit code can be retrieved from the operation status API once available. x-ms-original-file: 2026-07-01/BareMetalMachines_RunCommand.json                                                                     |
| [bareMetalMachinesRunDataExtractsRestrictedSample.js][baremetalmachinesrundataextractsrestrictedsample]                   | run one or more restricted data extractions on the provided bare metal machine. The URL to storage account with the command execution results and the command exit code can be retrieved from the operation status API once available. x-ms-original-file: 2026-07-01/BareMetalMachines_RunDataExtractsRestricted.json                                        |
| [bareMetalMachinesRunDataExtractsSample.js][baremetalmachinesrundataextractssample]                                       | run one or more data extractions on the provided bare metal machine. The URL to storage account with the command execution results and the command exit code can be retrieved from the operation status API once available. x-ms-original-file: 2026-07-01/BareMetalMachines_RunDataExtracts.json                                                             |
| [bareMetalMachinesRunReadCommandsSample.js][baremetalmachinesrunreadcommandssample]                                       | run one or more read-only commands on the provided bare metal machine. The URL to storage account with the command execution results and the command exit code can be retrieved from the operation status API once available. x-ms-original-file: 2026-07-01/BareMetalMachines_RunReadCommands_Hostname.json                                                  |
| [bareMetalMachinesStartSample.js][baremetalmachinesstartsample]                                                           | start the provided bare metal machine. x-ms-original-file: 2026-07-01/BareMetalMachines_Start.json                                                                                                                                                                                                                                                            |
| [bareMetalMachinesUncordonSample.js][baremetalmachinesuncordonsample]                                                     | uncordon the provided bare metal machine's Kubernetes node. x-ms-original-file: 2026-07-01/BareMetalMachines_Uncordon.json                                                                                                                                                                                                                                    |
| [bareMetalMachinesUpdateSample.js][baremetalmachinesupdatesample]                                                         | patch properties of the provided bare metal machine, or update tags associated with the bare metal machine. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/BareMetalMachines_Patch.json                                                                                                                                 |
| [bmcKeySetsCreateOrUpdateSample.js][bmckeysetscreateorupdatesample]                                                       | create a new baseboard management controller key set or update the existing one for the provided cluster. x-ms-original-file: 2026-07-01/BmcKeySets_Create.json                                                                                                                                                                                               |
| [bmcKeySetsDeleteSample.js][bmckeysetsdeletesample]                                                                       | delete the baseboard management controller key set of the provided cluster. x-ms-original-file: 2026-07-01/BmcKeySets_Delete.json                                                                                                                                                                                                                             |
| [bmcKeySetsGetSample.js][bmckeysetsgetsample]                                                                             | get baseboard management controller key set of the provided cluster. x-ms-original-file: 2026-07-01/BmcKeySets_Get.json                                                                                                                                                                                                                                       |
| [bmcKeySetsListByClusterSample.js][bmckeysetslistbyclustersample]                                                         | get a list of baseboard management controller key sets for the provided cluster. x-ms-original-file: 2026-07-01/BmcKeySets_ListByCluster.json                                                                                                                                                                                                                 |
| [bmcKeySetsUpdateSample.js][bmckeysetsupdatesample]                                                                       | patch properties of baseboard management controller key set for the provided cluster, or update the tags associated with it. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/BmcKeySets_Patch.json                                                                                                                       |
| [cloudServicesNetworksCreateOrUpdateSample.js][cloudservicesnetworkscreateorupdatesample]                                 | create a new cloud services network or update the properties of the existing cloud services network. x-ms-original-file: 2026-07-01/CloudServicesNetworks_Create.json                                                                                                                                                                                         |
| [cloudServicesNetworksDeleteSample.js][cloudservicesnetworksdeletesample]                                                 | delete the provided cloud services network. x-ms-original-file: 2026-07-01/CloudServicesNetworks_Delete.json                                                                                                                                                                                                                                                  |
| [cloudServicesNetworksGetSample.js][cloudservicesnetworksgetsample]                                                       | get properties of the provided cloud services network. x-ms-original-file: 2026-07-01/CloudServicesNetworks_Get.json                                                                                                                                                                                                                                          |
| [cloudServicesNetworksListByResourceGroupSample.js][cloudservicesnetworkslistbyresourcegroupsample]                       | get a list of cloud services networks in the provided resource group. x-ms-original-file: 2026-07-01/CloudServicesNetworks_ListByResourceGroup.json                                                                                                                                                                                                           |
| [cloudServicesNetworksListBySubscriptionSample.js][cloudservicesnetworkslistbysubscriptionsample]                         | get a list of cloud services networks in the provided subscription. x-ms-original-file: 2026-07-01/CloudServicesNetworks_ListBySubscription.json                                                                                                                                                                                                              |
| [cloudServicesNetworksUpdateSample.js][cloudservicesnetworksupdatesample]                                                 | update properties of the provided cloud services network, or update the tags associated with it. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/CloudServicesNetworks_Patch.json                                                                                                                                        |
| [clusterManagersCreateOrUpdateSample.js][clustermanagerscreateorupdatesample]                                             | create a new cluster manager or update properties of the cluster manager if it exists. x-ms-original-file: 2026-07-01/ClusterManagers_Create.json                                                                                                                                                                                                             |
| [clusterManagersDeleteSample.js][clustermanagersdeletesample]                                                             | delete the provided cluster manager. x-ms-original-file: 2026-07-01/ClusterManagers_Delete.json                                                                                                                                                                                                                                                               |
| [clusterManagersGetSample.js][clustermanagersgetsample]                                                                   | get the properties of the provided cluster manager. x-ms-original-file: 2026-07-01/ClusterManagers_Get.json                                                                                                                                                                                                                                                   |
| [clusterManagersListByResourceGroupSample.js][clustermanagerslistbyresourcegroupsample]                                   | get a list of cluster managers in the provided resource group. x-ms-original-file: 2026-07-01/ClusterManagers_ListByResourceGroup.json                                                                                                                                                                                                                        |
| [clusterManagersListBySubscriptionSample.js][clustermanagerslistbysubscriptionsample]                                     | get a list of cluster managers in the provided subscription. x-ms-original-file: 2026-07-01/ClusterManagers_ListBySubscription.json                                                                                                                                                                                                                           |
| [clusterManagersUpdateRelayPrivateEndpointConnectionSample.js][clustermanagersupdaterelayprivateendpointconnectionsample] | update the private endpoint connection for the Azure Relay namespace managed by the specified cluster manager. Use this operation to approve or reject a pending private endpoint connection request for the relay namespace managed by the cluster manager. x-ms-original-file: 2026-07-01/ClusterManagers_UpdateRelayPrivateEndpointConnection_Approve.json |
| [clusterManagersUpdateSample.js][clustermanagersupdatesample]                                                             | patch properties of the provided cluster manager, or update the tags assigned to the cluster manager. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/ClusterManagers_Patch.json                                                                                                                                         |
| [clustersContinueUpdateVersionSample.js][clusterscontinueupdateversionsample]                                             | trigger the continuation of an update for a cluster with a matching update strategy that has paused after completing a segment of the update. x-ms-original-file: 2026-07-01/Clusters_ContinueUpdateVersion.json                                                                                                                                              |
| [clustersCreateOrUpdateSample.js][clusterscreateorupdatesample]                                                           | create a new cluster or update the properties of the cluster if it exists. x-ms-original-file: 2026-07-01/Clusters_Create.json                                                                                                                                                                                                                                |
| [clustersDeleteSample.js][clustersdeletesample]                                                                           | delete the provided cluster. x-ms-original-file: 2026-07-01/Clusters_Delete.json                                                                                                                                                                                                                                                                              |
| [clustersDeploySample.js][clustersdeploysample]                                                                           | deploy the cluster using the rack configuration provided during creation. x-ms-original-file: 2026-07-01/Clusters_Deploy.json                                                                                                                                                                                                                                 |
| [clustersGetSample.js][clustersgetsample]                                                                                 | get properties of the provided cluster. x-ms-original-file: 2026-07-01/Clusters_Get.json                                                                                                                                                                                                                                                                      |
| [clustersInspectSample.js][clustersinspectsample]                                                                         | trigger an inspection of the cluster to perform validation and optional corrective actions based on the supplied additional actions and filters. x-ms-original-file: 2026-07-01/Clusters_Inspect.json                                                                                                                                                         |
| [clustersListByResourceGroupSample.js][clusterslistbyresourcegroupsample]                                                 | get a list of clusters in the provided resource group. x-ms-original-file: 2026-07-01/Clusters_ListByResourceGroup.json                                                                                                                                                                                                                                       |
| [clustersListBySubscriptionSample.js][clusterslistbysubscriptionsample]                                                   | get a list of clusters in the provided subscription. x-ms-original-file: 2026-07-01/Clusters_ListBySubscription.json                                                                                                                                                                                                                                          |
| [clustersRotateCredentialSample.js][clustersrotatecredentialsample]                                                       | rotate the specified cluster credential. x-ms-original-file: 2026-07-01/Clusters_RotateCredential.json                                                                                                                                                                                                                                                        |
| [clustersScanRuntimeSample.js][clustersscanruntimesample]                                                                 | triggers the execution of a runtime protection scan to detect and remediate detected issues, in accordance with the cluster configuration. x-ms-original-file: 2026-07-01/Clusters_ScanRuntime.json                                                                                                                                                           |
| [clustersUpdateSample.js][clustersupdatesample]                                                                           | patch the properties of the provided cluster, or update the tags associated with the cluster. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/Clusters_Patch_AggregatorOrSingleRackDefinition.json                                                                                                                       |
| [clustersUpdateVersionSample.js][clustersupdateversionsample]                                                             | update the version of the provided cluster to one of the available supported versions. x-ms-original-file: 2026-07-01/Clusters_UpdateVersion.json                                                                                                                                                                                                             |
| [consolesCreateOrUpdateSample.js][consolescreateorupdatesample]                                                           | create a new virtual machine console or update the properties of the existing virtual machine console. x-ms-original-file: 2026-07-01/Consoles_Create.json                                                                                                                                                                                                    |
| [consolesDeleteSample.js][consolesdeletesample]                                                                           | delete the provided virtual machine console. x-ms-original-file: 2026-07-01/Consoles_Delete.json                                                                                                                                                                                                                                                              |
| [consolesGetSample.js][consolesgetsample]                                                                                 | get properties of the provided virtual machine console. x-ms-original-file: 2026-07-01/Consoles_Get.json                                                                                                                                                                                                                                                      |
| [consolesListByVirtualMachineSample.js][consoleslistbyvirtualmachinesample]                                               | get a list of consoles for the provided virtual machine. x-ms-original-file: 2026-07-01/Consoles_ListByVirtualMachine.json                                                                                                                                                                                                                                    |
| [consolesUpdateSample.js][consolesupdatesample]                                                                           | patch the properties of the provided virtual machine console, or update the tags associated with the virtual machine console. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/Consoles_Patch.json                                                                                                                        |
| [kubernetesClusterFeaturesCreateOrUpdateSample.js][kubernetesclusterfeaturescreateorupdatesample]                         | create a new Kubernetes cluster feature or update properties of the Kubernetes cluster feature if it exists. x-ms-original-file: 2026-07-01/KubernetesClusterFeatures_Create.json                                                                                                                                                                             |
| [kubernetesClusterFeaturesDeleteSample.js][kubernetesclusterfeaturesdeletesample]                                         | delete the provided Kubernetes cluster feature. x-ms-original-file: 2026-07-01/KubernetesClusterFeatures_Delete.json                                                                                                                                                                                                                                          |
| [kubernetesClusterFeaturesGetSample.js][kubernetesclusterfeaturesgetsample]                                               | get properties of the provided the Kubernetes cluster feature. x-ms-original-file: 2026-07-01/KubernetesClusterFeatures_Get.json                                                                                                                                                                                                                              |
| [kubernetesClusterFeaturesListByKubernetesClusterSample.js][kubernetesclusterfeatureslistbykubernetesclustersample]       | get a list of features for the provided Kubernetes cluster. x-ms-original-file: 2026-07-01/KubernetesClusterFeatures_ListByKubernetesCluster.json                                                                                                                                                                                                             |
| [kubernetesClusterFeaturesUpdateSample.js][kubernetesclusterfeaturesupdatesample]                                         | patch properties of the provided Kubernetes cluster feature. x-ms-original-file: 2026-07-01/KubernetesClusterFeatures_Patch.json                                                                                                                                                                                                                              |
| [kubernetesClustersCreateOrUpdateSample.js][kubernetesclusterscreateorupdatesample]                                       | create a new Kubernetes cluster or update the properties of the existing one. x-ms-original-file: 2026-07-01/KubernetesClusters_Create.json                                                                                                                                                                                                                   |
| [kubernetesClustersDeleteSample.js][kubernetesclustersdeletesample]                                                       | delete the provided Kubernetes cluster. x-ms-original-file: 2026-07-01/KubernetesClusters_Delete.json                                                                                                                                                                                                                                                         |
| [kubernetesClustersGetSample.js][kubernetesclustersgetsample]                                                             | get properties of the provided the Kubernetes cluster. x-ms-original-file: 2026-07-01/KubernetesClusters_Get.json                                                                                                                                                                                                                                             |
| [kubernetesClustersListByResourceGroupSample.js][kubernetesclusterslistbyresourcegroupsample]                             | get a list of Kubernetes clusters in the provided resource group. x-ms-original-file: 2026-07-01/KubernetesClusters_ListByResourceGroup.json                                                                                                                                                                                                                  |
| [kubernetesClustersListBySubscriptionSample.js][kubernetesclusterslistbysubscriptionsample]                               | get a list of Kubernetes clusters in the provided subscription. x-ms-original-file: 2026-07-01/KubernetesClusters_ListBySubscription.json                                                                                                                                                                                                                     |
| [kubernetesClustersRestartNodeSample.js][kubernetesclustersrestartnodesample]                                             | restart a targeted node of a Kubernetes cluster. x-ms-original-file: 2026-07-01/KubernetesClusters_RestartNode.json                                                                                                                                                                                                                                           |
| [kubernetesClustersUpdateSample.js][kubernetesclustersupdatesample]                                                       | patch the properties of the provided Kubernetes cluster, or update the tags associated with the Kubernetes cluster. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/KubernetesClusters_Patch.json                                                                                                                        |
| [kubernetesVersionsCreateOrUpdateSample.js][kubernetesversionscreateorupdatesample]                                       | create the Kubernetes version resource or update its tags. This resource is system managed and should only be created with the name "default". x-ms-original-file: 2026-07-01/KubernetesVersions_Create.json                                                                                                                                                  |
| [kubernetesVersionsDeleteSample.js][kubernetesversionsdeletesample]                                                       | delete the specified Kubernetes version resource. x-ms-original-file: 2026-07-01/KubernetesVersions_Delete.json                                                                                                                                                                                                                                               |
| [kubernetesVersionsGetSample.js][kubernetesversionsgetsample]                                                             | retrieve the Kubernetes version resource that describes the available Kubernetes versions for deployment. x-ms-original-file: 2026-07-01/KubernetesVersions_Get.json                                                                                                                                                                                          |
| [kubernetesVersionsListByResourceGroupSample.js][kubernetesversionslistbyresourcegroupsample]                             | get a list of Kubernetes version resources in the provided resource group. x-ms-original-file: 2026-07-01/KubernetesVersions_ListByResourceGroup.json                                                                                                                                                                                                         |
| [kubernetesVersionsListBySubscriptionSample.js][kubernetesversionslistbysubscriptionsample]                               | get a list of Kubernetes version resources in the provided subscription. x-ms-original-file: 2026-07-01/KubernetesVersions_ListBySubscription.json                                                                                                                                                                                                            |
| [kubernetesVersionsUpdateSample.js][kubernetesversionsupdatesample]                                                       | update tags associated with the Kubernetes version resource. No other properties are supported for update. x-ms-original-file: 2026-07-01/KubernetesVersions_UpdateTags.json                                                                                                                                                                                  |
| [l2NetworksCreateOrUpdateSample.js][l2networkscreateorupdatesample]                                                       | create a new layer 2 (L2) network or update the properties of the existing network. x-ms-original-file: 2026-07-01/L2Networks_Create.json                                                                                                                                                                                                                     |
| [l2NetworksDeleteSample.js][l2networksdeletesample]                                                                       | delete the provided layer 2 (L2) network. x-ms-original-file: 2026-07-01/L2Networks_Delete.json                                                                                                                                                                                                                                                               |
| [l2NetworksGetSample.js][l2networksgetsample]                                                                             | get properties of the provided layer 2 (L2) network. x-ms-original-file: 2026-07-01/L2Networks_Get.json                                                                                                                                                                                                                                                       |
| [l2NetworksListByResourceGroupSample.js][l2networkslistbyresourcegroupsample]                                             | get a list of layer 2 (L2) networks in the provided resource group. x-ms-original-file: 2026-07-01/L2Networks_ListByResourceGroup.json                                                                                                                                                                                                                        |
| [l2NetworksListBySubscriptionSample.js][l2networkslistbysubscriptionsample]                                               | get a list of layer 2 (L2) networks in the provided subscription. x-ms-original-file: 2026-07-01/L2Networks_ListBySubscription.json                                                                                                                                                                                                                           |
| [l2NetworksUpdateSample.js][l2networksupdatesample]                                                                       | update tags associated with the provided layer 2 (L2) network. x-ms-original-file: 2026-07-01/L2Networks_Patch.json                                                                                                                                                                                                                                           |
| [l3NetworksCreateOrUpdateSample.js][l3networkscreateorupdatesample]                                                       | create a new layer 3 (L3) network or update the properties of the existing network. x-ms-original-file: 2026-07-01/L3Networks_Create.json                                                                                                                                                                                                                     |
| [l3NetworksDeleteSample.js][l3networksdeletesample]                                                                       | delete the provided layer 3 (L3) network. x-ms-original-file: 2026-07-01/L3Networks_Delete.json                                                                                                                                                                                                                                                               |
| [l3NetworksGetSample.js][l3networksgetsample]                                                                             | get properties of the provided layer 3 (L3) network. x-ms-original-file: 2026-07-01/L3Networks_Get.json                                                                                                                                                                                                                                                       |
| [l3NetworksListByResourceGroupSample.js][l3networkslistbyresourcegroupsample]                                             | get a list of layer 3 (L3) networks in the provided resource group. x-ms-original-file: 2026-07-01/L3Networks_ListByResourceGroup.json                                                                                                                                                                                                                        |
| [l3NetworksListBySubscriptionSample.js][l3networkslistbysubscriptionsample]                                               | get a list of layer 3 (L3) networks in the provided subscription. x-ms-original-file: 2026-07-01/L3Networks_ListBySubscription.json                                                                                                                                                                                                                           |
| [l3NetworksUpdateSample.js][l3networksupdatesample]                                                                       | update tags associated with the provided layer 3 (L3) network. x-ms-original-file: 2026-07-01/L3Networks_Patch.json                                                                                                                                                                                                                                           |
| [metricsConfigurationsCreateOrUpdateSample.js][metricsconfigurationscreateorupdatesample]                                 | create new or update the existing metrics configuration of the provided cluster. x-ms-original-file: 2026-07-01/ClusterMetricsConfigurations_Create.json                                                                                                                                                                                                      |
| [metricsConfigurationsDeleteSample.js][metricsconfigurationsdeletesample]                                                 | delete the metrics configuration of the provided cluster. x-ms-original-file: 2026-07-01/ClusterMetricsConfigurations_Delete.json                                                                                                                                                                                                                             |
| [metricsConfigurationsGetSample.js][metricsconfigurationsgetsample]                                                       | get metrics configuration of the provided cluster. x-ms-original-file: 2026-07-01/ClusterMetricsConfigurations_Get.json                                                                                                                                                                                                                                       |
| [metricsConfigurationsListByClusterSample.js][metricsconfigurationslistbyclustersample]                                   | get a list of metrics configurations for the provided cluster. x-ms-original-file: 2026-07-01/ClusterMetricsConfigurations_ListByCluster.json                                                                                                                                                                                                                 |
| [metricsConfigurationsUpdateSample.js][metricsconfigurationsupdatesample]                                                 | patch properties of metrics configuration for the provided cluster, or update the tags associated with it. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/ClusterMetricsConfigurations_Patch.json                                                                                                                       |
| [operationsListSample.js][operationslistsample]                                                                           | list the operations for the provider x-ms-original-file: 2026-07-01/Operations_List.json                                                                                                                                                                                                                                                                      |
| [rackSkusGetSample.js][rackskusgetsample]                                                                                 | get the properties of the provided rack SKU. x-ms-original-file: 2026-07-01/RackSkus_Get.json                                                                                                                                                                                                                                                                 |
| [rackSkusListBySubscriptionSample.js][rackskuslistbysubscriptionsample]                                                   | get a list of rack SKUs in the provided subscription. x-ms-original-file: 2026-07-01/RackSkus_ListBySubscription.json                                                                                                                                                                                                                                         |
| [racksCreateOrUpdateSample.js][rackscreateorupdatesample]                                                                 | create a new rack or update properties of the existing one. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: 2026-07-01/Racks_Create.json                                                                                                                                    |
| [racksDeleteSample.js][racksdeletesample]                                                                                 | delete the provided rack. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: 2026-07-01/Racks_Delete.json                                                                                                                                                                      |
| [racksGetSample.js][racksgetsample]                                                                                       | get properties of the provided rack. x-ms-original-file: 2026-07-01/Racks_Get.json                                                                                                                                                                                                                                                                            |
| [racksListByResourceGroupSample.js][rackslistbyresourcegroupsample]                                                       | get a list of racks in the provided resource group. x-ms-original-file: 2026-07-01/Racks_ListByResourceGroup.json                                                                                                                                                                                                                                             |
| [racksListBySubscriptionSample.js][rackslistbysubscriptionsample]                                                         | get a list of racks in the provided subscription. x-ms-original-file: 2026-07-01/Racks_ListBySubscription.json                                                                                                                                                                                                                                                |
| [racksUpdateSample.js][racksupdatesample]                                                                                 | patch properties of the provided rack, or update the tags associated with the rack. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/Racks_Patch.json                                                                                                                                                                     |
| [storageAppliancesCreateOrUpdateSample.js][storageappliancescreateorupdatesample]                                         | create a new storage appliance or update the properties of the existing one. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: 2026-07-01/StorageAppliances_Create.json                                                                                                       |
| [storageAppliancesDeleteSample.js][storageappliancesdeletesample]                                                         | delete the provided storage appliance. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: 2026-07-01/StorageAppliances_Delete.json                                                                                                                                             |
| [storageAppliancesDisableRemoteVendorManagementSample.js][storageappliancesdisableremotevendormanagementsample]           | disable remote vendor management of the provided storage appliance. x-ms-original-file: 2026-07-01/StorageAppliances_DisableRemoteVendorManagement.json                                                                                                                                                                                                       |
| [storageAppliancesEnableRemoteVendorManagementSample.js][storageappliancesenableremotevendormanagementsample]             | enable remote vendor management of the provided storage appliance. x-ms-original-file: 2026-07-01/StorageAppliances_EnableRemoteVendorManagement.json                                                                                                                                                                                                         |
| [storageAppliancesGetSample.js][storageappliancesgetsample]                                                               | get properties of the provided storage appliance. x-ms-original-file: 2026-07-01/StorageAppliances_Get.json                                                                                                                                                                                                                                                   |
| [storageAppliancesListByResourceGroupSample.js][storageapplianceslistbyresourcegroupsample]                               | get a list of storage appliances in the provided resource group. x-ms-original-file: 2026-07-01/StorageAppliances_ListByResourceGroup.json                                                                                                                                                                                                                    |
| [storageAppliancesListBySubscriptionSample.js][storageapplianceslistbysubscriptionsample]                                 | get a list of storage appliances in the provided subscription. x-ms-original-file: 2026-07-01/StorageAppliances_ListBySubscription.json                                                                                                                                                                                                                       |
| [storageAppliancesRunReadCommandsSample.js][storageappliancesrunreadcommandssample]                                       | run one or more read-only commands on the provided storage appliance. x-ms-original-file: 2026-07-01/StorageAppliances_RunReadCommands.json                                                                                                                                                                                                                   |
| [storageAppliancesUpdateSample.js][storageappliancesupdatesample]                                                         | update properties of the provided storage appliance, or update tags associated with the storage appliance Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/StorageAppliances_Patch.json                                                                                                                                   |
| [trunkedNetworksCreateOrUpdateSample.js][trunkednetworkscreateorupdatesample]                                             | create a new trunked network or update the properties of the existing trunked network. x-ms-original-file: 2026-07-01/TrunkedNetworks_Create.json                                                                                                                                                                                                             |
| [trunkedNetworksDeleteSample.js][trunkednetworksdeletesample]                                                             | delete the provided trunked network. x-ms-original-file: 2026-07-01/TrunkedNetworks_Delete.json                                                                                                                                                                                                                                                               |
| [trunkedNetworksGetSample.js][trunkednetworksgetsample]                                                                   | get properties of the provided trunked network. x-ms-original-file: 2026-07-01/TrunkedNetworks_Get.json                                                                                                                                                                                                                                                       |
| [trunkedNetworksListByResourceGroupSample.js][trunkednetworkslistbyresourcegroupsample]                                   | get a list of trunked networks in the provided resource group. x-ms-original-file: 2026-07-01/TrunkedNetworks_ListByResourceGroup.json                                                                                                                                                                                                                        |
| [trunkedNetworksListBySubscriptionSample.js][trunkednetworkslistbysubscriptionsample]                                     | get a list of trunked networks in the provided subscription. x-ms-original-file: 2026-07-01/TrunkedNetworks_ListBySubscription.json                                                                                                                                                                                                                           |
| [trunkedNetworksUpdateSample.js][trunkednetworksupdatesample]                                                             | update tags associated with the provided trunked network. x-ms-original-file: 2026-07-01/TrunkedNetworks_Patch.json                                                                                                                                                                                                                                           |
| [virtualMachinesAssignRelaySample.js][virtualmachinesassignrelaysample]                                                   | assigns a relay to the specified Microsoft.HybridCompute machine associated with the provided virtual machine. x-ms-original-file: 2026-07-01/VirtualMachines_AssignRelay.json                                                                                                                                                                                |
| [virtualMachinesCreateOrUpdateSample.js][virtualmachinescreateorupdatesample]                                             | create a new virtual machine or update the properties of the existing virtual machine. x-ms-original-file: 2026-07-01/VirtualMachines_Create.json                                                                                                                                                                                                             |
| [virtualMachinesDeleteSample.js][virtualmachinesdeletesample]                                                             | delete the provided virtual machine. x-ms-original-file: 2026-07-01/VirtualMachines_Delete.json                                                                                                                                                                                                                                                               |
| [virtualMachinesGetSample.js][virtualmachinesgetsample]                                                                   | get properties of the provided virtual machine. x-ms-original-file: 2026-07-01/VirtualMachines_Get.json                                                                                                                                                                                                                                                       |
| [virtualMachinesListByResourceGroupSample.js][virtualmachineslistbyresourcegroupsample]                                   | get a list of virtual machines in the provided resource group. x-ms-original-file: 2026-07-01/VirtualMachines_ListByResourceGroup.json                                                                                                                                                                                                                        |
| [virtualMachinesListBySubscriptionSample.js][virtualmachineslistbysubscriptionsample]                                     | get a list of virtual machines in the provided subscription. x-ms-original-file: 2026-07-01/VirtualMachines_ListBySubscription.json                                                                                                                                                                                                                           |
| [virtualMachinesPowerOffSample.js][virtualmachinespoweroffsample]                                                         | power off the provided virtual machine. x-ms-original-file: 2026-07-01/VirtualMachines_PowerOff.json                                                                                                                                                                                                                                                          |
| [virtualMachinesReimageSample.js][virtualmachinesreimagesample]                                                           | reimage the provided virtual machine. x-ms-original-file: 2026-07-01/VirtualMachines_Reimage.json                                                                                                                                                                                                                                                             |
| [virtualMachinesRestartSample.js][virtualmachinesrestartsample]                                                           | restart the provided virtual machine. x-ms-original-file: 2026-07-01/VirtualMachines_Restart.json                                                                                                                                                                                                                                                             |
| [virtualMachinesStartSample.js][virtualmachinesstartsample]                                                               | start the provided virtual machine. x-ms-original-file: 2026-07-01/VirtualMachines_Start.json                                                                                                                                                                                                                                                                 |
| [virtualMachinesUpdateSample.js][virtualmachinesupdatesample]                                                             | patch the properties of the provided virtual machine, or update the tags associated with the virtual machine. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/VirtualMachines_Patch.json                                                                                                                                 |
| [volumesCreateOrUpdateSample.js][volumescreateorupdatesample]                                                             | create a new volume or update the properties of the existing one. x-ms-original-file: 2026-07-01/Volumes_Create.json                                                                                                                                                                                                                                          |
| [volumesDeleteSample.js][volumesdeletesample]                                                                             | delete the provided volume. x-ms-original-file: 2026-07-01/Volumes_Delete.json                                                                                                                                                                                                                                                                                |
| [volumesGetSample.js][volumesgetsample]                                                                                   | get properties of the provided volume. x-ms-original-file: 2026-07-01/Volumes_Get.json                                                                                                                                                                                                                                                                        |
| [volumesListByResourceGroupSample.js][volumeslistbyresourcegroupsample]                                                   | get a list of volumes in the provided resource group. x-ms-original-file: 2026-07-01/Volumes_ListByResourceGroup.json                                                                                                                                                                                                                                         |
| [volumesListBySubscriptionSample.js][volumeslistbysubscriptionsample]                                                     | get a list of volumes in the provided subscription. x-ms-original-file: 2026-07-01/Volumes_ListBySubscription.json                                                                                                                                                                                                                                            |
| [volumesUpdateSample.js][volumesupdatesample]                                                                             | update tags associated with the provided volume. x-ms-original-file: 2026-07-01/Volumes_Patch.json                                                                                                                                                                                                                                                            |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node accessBridgesCreateOrUpdateSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node accessBridgesCreateOrUpdateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[accessbridgescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/accessBridgesCreateOrUpdateSample.js
[accessbridgesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/accessBridgesDeleteSample.js
[accessbridgesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/accessBridgesGetSample.js
[accessbridgeslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/accessBridgesListByResourceGroupSample.js
[accessbridgeslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/accessBridgesListBySubscriptionSample.js
[accessbridgesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/accessBridgesUpdateSample.js
[agentpoolscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/agentPoolsCreateOrUpdateSample.js
[agentpoolsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/agentPoolsDeleteSample.js
[agentpoolsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/agentPoolsGetSample.js
[agentpoolslistbykubernetesclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/agentPoolsListByKubernetesClusterSample.js
[agentpoolsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/agentPoolsUpdateSample.js
[baremetalmachinekeysetscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachineKeySetsCreateOrUpdateSample.js
[baremetalmachinekeysetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachineKeySetsDeleteSample.js
[baremetalmachinekeysetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachineKeySetsGetSample.js
[baremetalmachinekeysetslistbyclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachineKeySetsListByClusterSample.js
[baremetalmachinekeysetsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachineKeySetsUpdateSample.js
[baremetalmachinescordonsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachinesCordonSample.js
[baremetalmachinescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachinesCreateOrUpdateSample.js
[baremetalmachinesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachinesDeleteSample.js
[baremetalmachinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachinesGetSample.js
[baremetalmachineslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachinesListByResourceGroupSample.js
[baremetalmachineslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachinesListBySubscriptionSample.js
[baremetalmachinespoweroffsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachinesPowerOffSample.js
[baremetalmachinesreimagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachinesReimageSample.js
[baremetalmachinesreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachinesReplaceSample.js
[baremetalmachinesrestartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachinesRestartSample.js
[baremetalmachinesruncommandsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachinesRunCommandSample.js
[baremetalmachinesrundataextractsrestrictedsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachinesRunDataExtractsRestrictedSample.js
[baremetalmachinesrundataextractssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachinesRunDataExtractsSample.js
[baremetalmachinesrunreadcommandssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachinesRunReadCommandsSample.js
[baremetalmachinesstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachinesStartSample.js
[baremetalmachinesuncordonsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachinesUncordonSample.js
[baremetalmachinesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bareMetalMachinesUpdateSample.js
[bmckeysetscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bmcKeySetsCreateOrUpdateSample.js
[bmckeysetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bmcKeySetsDeleteSample.js
[bmckeysetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bmcKeySetsGetSample.js
[bmckeysetslistbyclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bmcKeySetsListByClusterSample.js
[bmckeysetsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/bmcKeySetsUpdateSample.js
[cloudservicesnetworkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/cloudServicesNetworksCreateOrUpdateSample.js
[cloudservicesnetworksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/cloudServicesNetworksDeleteSample.js
[cloudservicesnetworksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/cloudServicesNetworksGetSample.js
[cloudservicesnetworkslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/cloudServicesNetworksListByResourceGroupSample.js
[cloudservicesnetworkslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/cloudServicesNetworksListBySubscriptionSample.js
[cloudservicesnetworksupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/cloudServicesNetworksUpdateSample.js
[clustermanagerscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/clusterManagersCreateOrUpdateSample.js
[clustermanagersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/clusterManagersDeleteSample.js
[clustermanagersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/clusterManagersGetSample.js
[clustermanagerslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/clusterManagersListByResourceGroupSample.js
[clustermanagerslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/clusterManagersListBySubscriptionSample.js
[clustermanagersupdaterelayprivateendpointconnectionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/clusterManagersUpdateRelayPrivateEndpointConnectionSample.js
[clustermanagersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/clusterManagersUpdateSample.js
[clusterscontinueupdateversionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/clustersContinueUpdateVersionSample.js
[clusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/clustersCreateOrUpdateSample.js
[clustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/clustersDeleteSample.js
[clustersdeploysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/clustersDeploySample.js
[clustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/clustersGetSample.js
[clustersinspectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/clustersInspectSample.js
[clusterslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/clustersListByResourceGroupSample.js
[clusterslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/clustersListBySubscriptionSample.js
[clustersrotatecredentialsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/clustersRotateCredentialSample.js
[clustersscanruntimesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/clustersScanRuntimeSample.js
[clustersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/clustersUpdateSample.js
[clustersupdateversionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/clustersUpdateVersionSample.js
[consolescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/consolesCreateOrUpdateSample.js
[consolesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/consolesDeleteSample.js
[consolesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/consolesGetSample.js
[consoleslistbyvirtualmachinesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/consolesListByVirtualMachineSample.js
[consolesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/consolesUpdateSample.js
[kubernetesclusterfeaturescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/kubernetesClusterFeaturesCreateOrUpdateSample.js
[kubernetesclusterfeaturesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/kubernetesClusterFeaturesDeleteSample.js
[kubernetesclusterfeaturesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/kubernetesClusterFeaturesGetSample.js
[kubernetesclusterfeatureslistbykubernetesclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/kubernetesClusterFeaturesListByKubernetesClusterSample.js
[kubernetesclusterfeaturesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/kubernetesClusterFeaturesUpdateSample.js
[kubernetesclusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/kubernetesClustersCreateOrUpdateSample.js
[kubernetesclustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/kubernetesClustersDeleteSample.js
[kubernetesclustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/kubernetesClustersGetSample.js
[kubernetesclusterslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/kubernetesClustersListByResourceGroupSample.js
[kubernetesclusterslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/kubernetesClustersListBySubscriptionSample.js
[kubernetesclustersrestartnodesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/kubernetesClustersRestartNodeSample.js
[kubernetesclustersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/kubernetesClustersUpdateSample.js
[kubernetesversionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/kubernetesVersionsCreateOrUpdateSample.js
[kubernetesversionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/kubernetesVersionsDeleteSample.js
[kubernetesversionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/kubernetesVersionsGetSample.js
[kubernetesversionslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/kubernetesVersionsListByResourceGroupSample.js
[kubernetesversionslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/kubernetesVersionsListBySubscriptionSample.js
[kubernetesversionsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/kubernetesVersionsUpdateSample.js
[l2networkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/l2NetworksCreateOrUpdateSample.js
[l2networksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/l2NetworksDeleteSample.js
[l2networksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/l2NetworksGetSample.js
[l2networkslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/l2NetworksListByResourceGroupSample.js
[l2networkslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/l2NetworksListBySubscriptionSample.js
[l2networksupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/l2NetworksUpdateSample.js
[l3networkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/l3NetworksCreateOrUpdateSample.js
[l3networksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/l3NetworksDeleteSample.js
[l3networksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/l3NetworksGetSample.js
[l3networkslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/l3NetworksListByResourceGroupSample.js
[l3networkslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/l3NetworksListBySubscriptionSample.js
[l3networksupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/l3NetworksUpdateSample.js
[metricsconfigurationscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/metricsConfigurationsCreateOrUpdateSample.js
[metricsconfigurationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/metricsConfigurationsDeleteSample.js
[metricsconfigurationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/metricsConfigurationsGetSample.js
[metricsconfigurationslistbyclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/metricsConfigurationsListByClusterSample.js
[metricsconfigurationsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/metricsConfigurationsUpdateSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/operationsListSample.js
[rackskusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/rackSkusGetSample.js
[rackskuslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/rackSkusListBySubscriptionSample.js
[rackscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/racksCreateOrUpdateSample.js
[racksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/racksDeleteSample.js
[racksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/racksGetSample.js
[rackslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/racksListByResourceGroupSample.js
[rackslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/racksListBySubscriptionSample.js
[racksupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/racksUpdateSample.js
[storageappliancescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/storageAppliancesCreateOrUpdateSample.js
[storageappliancesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/storageAppliancesDeleteSample.js
[storageappliancesdisableremotevendormanagementsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/storageAppliancesDisableRemoteVendorManagementSample.js
[storageappliancesenableremotevendormanagementsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/storageAppliancesEnableRemoteVendorManagementSample.js
[storageappliancesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/storageAppliancesGetSample.js
[storageapplianceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/storageAppliancesListByResourceGroupSample.js
[storageapplianceslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/storageAppliancesListBySubscriptionSample.js
[storageappliancesrunreadcommandssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/storageAppliancesRunReadCommandsSample.js
[storageappliancesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/storageAppliancesUpdateSample.js
[trunkednetworkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/trunkedNetworksCreateOrUpdateSample.js
[trunkednetworksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/trunkedNetworksDeleteSample.js
[trunkednetworksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/trunkedNetworksGetSample.js
[trunkednetworkslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/trunkedNetworksListByResourceGroupSample.js
[trunkednetworkslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/trunkedNetworksListBySubscriptionSample.js
[trunkednetworksupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/trunkedNetworksUpdateSample.js
[virtualmachinesassignrelaysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/virtualMachinesAssignRelaySample.js
[virtualmachinescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/virtualMachinesCreateOrUpdateSample.js
[virtualmachinesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/virtualMachinesDeleteSample.js
[virtualmachinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/virtualMachinesGetSample.js
[virtualmachineslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/virtualMachinesListByResourceGroupSample.js
[virtualmachineslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/virtualMachinesListBySubscriptionSample.js
[virtualmachinespoweroffsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/virtualMachinesPowerOffSample.js
[virtualmachinesreimagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/virtualMachinesReimageSample.js
[virtualmachinesrestartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/virtualMachinesRestartSample.js
[virtualmachinesstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/virtualMachinesStartSample.js
[virtualmachinesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/virtualMachinesUpdateSample.js
[volumescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/volumesCreateOrUpdateSample.js
[volumesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/volumesDeleteSample.js
[volumesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/volumesGetSample.js
[volumeslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/volumesListByResourceGroupSample.js
[volumeslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/volumesListBySubscriptionSample.js
[volumesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/javascript/volumesUpdateSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-networkcloud
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/networkcloud/arm-networkcloud/README.md
